will fix bug on generating availableEmployees in adminDash/ShiftsTable, also adminDash/Calendar's available emps for daySpotlight also wonky

--- a/src/App.css
+++ b/src/App.css
@@ -70,10 +70,6 @@
   grid-template-columns: 1fr 2fr;
 }
 
-.card-shift, .card-employee {
+.blue-bg {
   background-color: lightblue;
-}
-
-.card-client {
-
 }
